a test for buttons issue on ios

--- a/public/css/parking_main.css
+++ b/public/css/parking_main.css
@@ -31,7 +31,7 @@
     border: none;
     height: 6vh;
     padding-top: 0.2rem;
-    font-size: 2.8vh;
+    font-size: 2vh;
 }
 
 
